@@ -1,5 +1,9 @@
+#ifndef LIBPORT_PROGRAM_NAME_HH
+# define LIBPORT_PROGRAM_NAME_HH
+
 namespace libport
 {
   extern const char* program_name;
 }
 
+#endif
